<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/phase_1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/phase_1" />
        <item
            android:id="@+id/phase_2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/phase_2" />
        <item
            android:id="@+id/phase_3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/phase_3" />
        <item
            android:id="@+id/phase_4"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/phase_4" />
    </group>
</menu>